--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typed.js": "2.0.10"
   },
   "devDependencies": {
+    "gh-pages": "2.0.1",
     "mark.js": "8.11.1",
     "prettier": "^1.17.0"
   },
@@ -35,7 +36,8 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop --open",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+    "deploy": "gatsby build && gh-pages -d public -b master"
   },
   "repository": {
     "type": "git",
