--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "classnames": "^2.2.6",
     "emotion-theming": "^10.0.19",
     "gatsby": "^2.13.1",
-    "gatsby-image": "^2.2.4",
+    "gatsby-image": "^2.2.23",
     "gatsby-plugin-manifest": "^2.2.1",
     "gatsby-plugin-offline": "^2.2.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
@@ -20,12 +20,14 @@
     "lodash.throttle": "^4.1.1",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
+    "randomcolor": "^0.5.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-lazyload": "^2.6.2",
     "rebass": "^4.0.5",
     "sanitize.css": "^11.0.0",
-    "typed.js": "^2.0.10"
+    "typed.js": "^2.0.11"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
